--- a/WindowsFormsApp4/Properties/Resources.resx
+++ b/WindowsFormsApp4/Properties/Resources.resx
@@ -125,6 +125,7 @@
     <value>..\Resources\Windows Unlock.wav;System.IO.MemoryStream, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
   <data name="if_wow_ilidan_49686" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\if_wow_ilidan_49686.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+    <value>..\Resources\wow.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  
 </root>
